AC_INIT([avant-window-navigator], [0.1.1], [])

AC_CONFIG_SRCDIR([.])
AC_CONFIG_HEADERS([config.h])

AM_INIT_AUTOMAKE([1.9 tar-ustar])
AM_MAINTAINER_MODE

AC_SUBST([ACLOCAL_AMFLAGS], ["\${ACLOCAL_FLAGS}"])

AC_ISC_POSIX
AC_PROG_CC
AC_STDC_HEADERS
AM_PROG_LIBTOOL

dnl CFLAGS
CFLAGS="$CFLAGS -Wall -pedantic -std=c99 -fno-strict-aliasing -fmessage-length=0 -D_FORTIFY_SOURCE=2"

dnl ==============================================
dnl translation support
dnl ==============================================

GETTEXT_PACKAGE=avant-window-navigator
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE", [Gettext package])
ALL_LINGUAS="en_GB"

IT_PROG_INTLTOOL([0.34])
AM_GLIB_GNU_GETTEXT

slicelocaledir='${prefix}/${DATADIRNAME}/locale'
AC_SUBST(slicelocaledir)

dnl ==============================================
dnl Check that we meet the  dependencies
dnl ==============================================
AM_PATH_GLIB_2_0(2.8.0,,,gobject)

COMMON_MODULES="glib-2.0 gobject-2.0 gtk+-2.0 gdk-2.0"

PKG_CHECK_MODULES(AWN, [ $COMMON_MODULES libwnck-1.0 gconf-2.0])
AC_SUBST(AWN_CFLAGS)
AC_SUBST(AWN_LIBS)

dnl ==============================================
dnl Gconf
dnl ==============================================

AC_PATH_PROG(GCONFTOOL, gconftool-2, no)

if test x"$GCONFTOOL" = xno; then
  AC_MSG_ERROR([gconftool-2 executable was not found in your path - should be install with gconf])
fi

AM_GCONF_SOURCE_2

dnl ==============================================
dnl End: Gconf
dnl ==============================================

AC_OUTPUT([
Makefile
avant-preferences/Makefile
src/Makefile
data/Makefile
data/active/Makefile
po/Makefile.in
])
